Fixed an issue with the hero-text not fitting inside the hero on stupidly-small-phones

--- a/wsgi/static/css/2-modules/_hero.scss
+++ b/wsgi/static/css/2-modules/_hero.scss
@@ -6,6 +6,8 @@ $hero-divider-color: $light-gray;
 $hero-divider-height: 5px;
 // Variables for hero text
 $hero-text-color: $light-gray;
+$stupidly-small-phones: new-breakpoint(max-width 325px);
+
 
 .top-hero {
   min-height: 80vh;
@@ -23,9 +25,7 @@ $hero-text-color: $light-gray;
     width: 100%;
 
     @include media($large-screen) {
-
       width: auto;
-
     }
   }
 
@@ -52,6 +52,9 @@ $hero-text-color: $light-gray;
     font-size: 1.2em;
     @include media ($large-screen) {
       text-align: justify;
+    }
+    @include media($stupidly-small-phones) {
+      font-size: 1em;
     }
   }
 
