--- a/wsgi/static/css/3-layouts/_applicants.scss
+++ b/wsgi/static/css/3-layouts/_applicants.scss
@@ -6,11 +6,11 @@ $hero-divider-height: 5px;
 // Variables for hero text
 $applicant-text-color: $light-gray;
 
-$stupidly-small-phones: new-breakpoint(max-width 325px);
 
 .applicant-hero {
   @extend .top-hero;
   @include section-cover-background('https://s3.eu-central-1.amazonaws.com/isektionen-bildbank/campus_nkpg.jpg')
+
 }
 
 .promo-section {
